--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   background: url(../img/bgLight.jpg);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: monospace;
@@ -12,7 +13,7 @@ body.dark-mode {
   color: #fff;
 }
 
-main {
+section {
   background-color: #ffffff93;
   backdrop-filter: blur(10px);
   display: flex;
@@ -20,12 +21,13 @@ main {
   align-items: center;
   justify-content: center;
   padding: 20px;
+  margin: 20px;
   width: 70%;
   border-radius: 20px;
   transition: all 0.2s;
 }
 
-body.dark-mode main {
+body.dark-mode section {
   background-color: #5b5b5b6e;
   color: #fff;
 }
